--- a/src/components/button/button_empty/_button_empty.scss
+++ b/src/components/button/button_empty/_button_empty.scss
@@ -1,6 +1,7 @@
 /**
  * 1. We don't want any of the animations that come inherited from the mixin.
  *    These should act like normal links instead.
+ * 2. Change the easing, quickness to not bounce so lighter backgrounds don't flash
  */
 .euiButtonEmpty {
   @include euiButton;
@@ -8,8 +9,10 @@
   border-color: transparent;
   background-color: transparent;
   box-shadow: none;
-  transform: none !important; // 1
-  animation: none !important; // 1
+  transform: none !important; /* 1 */
+  animation: none !important; /* 1 */
+  transition-timing-function: ease-in; /* 2 */
+  transition-duration: $euiAnimSpeedFast; /* 2 */
 
   .euiButtonEmpty__content {
     @include euiButtonContent;
