--- a/src/components/page/_page.scss
+++ b/src/components/page/_page.scss
@@ -15,6 +15,6 @@
 
   @include euiBreakpoint('xs', 's') {
     flex-direction: column;
-    padding: 0;
+    // padding: 0; temporarily removing
   }
 }
