--- a/src/components/popover/_popover.scss
+++ b/src/components/popover/_popover.scss
@@ -18,11 +18,13 @@
 /**
  * 1. Can expand further, but it looks weird if it's smaller than the originating button.
  * 2. Animation happens on the panel.
+ * 3. Make sure the panel stays within the window.
  */
 .euiPopover__panel {
   position: absolute;
   z-index: $euiZContentMenu;
   min-width: $euiButtonMinWidth; /* 1 */
+  max-width: calc(100vw - #{$euiSizeXL}); /* 3 */
   backface-visibility: hidden;
   pointer-events: none;
   transition: /* 2 */
@@ -32,6 +34,10 @@
   opacity: 0; /* 2 */
   visibility: hidden; /* 2 */
   transform: translateY(0) translateX(0) translateZ(0); /* 2 */
+
+  > * {
+    max-width: 100%; /* 3 */
+  }
 
   &.euiPopover__panel-isOpen {
     opacity: 1;
