--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -17,6 +17,13 @@
       padding: $euiSizeS $euiSizeS;
     }
   }
+
+  &.euiTabs--expand {
+    .euiTab {
+      flex-grow: 1;
+      flex-basis: 0%;
+    }
+  }
 }
 
 .euiTab {
