--- a/src/components/flex/_flex_item.scss
+++ b/src/components/flex/_flex_item.scss
@@ -8,10 +8,7 @@
   /*
    * 1. We need the extra specificity here to override the FlexGroup > FlexItem styles.
    * 2. FlexItem can be manually set to not grow if needed.
-   * 3. Fix for IE or else flex item never shows
    */
-  .euiFlexGroup--directionColumn &, /* 3 */
-  .euiFlexGroup--directionColumnReverse &, /* 3 */
   &.euiFlexItem--flexGrowZero { /* 1 */
     flex-grow: 0; /* 2 */
     flex-basis: auto; /* 2 */
@@ -19,7 +16,7 @@
 
   @for $i from 1 through 10 {
     &.euiFlexItem--flexGrow#{$i} {
-      flex-grow: $i
+      flex-grow: $i;
     }
   }
 }
