--- a/src/components/xy_chart/_xy_chart.scss
+++ b/src/components/xy_chart/_xy_chart.scss
@@ -1,3 +1,4 @@
-.rv-xy-plot__inner {
-  overflow: visible; // TODO fix when adding automatic margin into svg
+.rv-xy-plot {
+  width: 100% !important;  // this because react-vis fix the width of the container in px
+  height: 100% !important; // avoid a correct computation of the component size
 }
