--- a/src/components/panel/_mixins.scss
+++ b/src/components/panel/_mixins.scss
@@ -37,14 +37,18 @@
       }
 
       &.#{$selector}--shadow {
-        @if (lightness($euiTextColor) < 50) {
-          border-bottom-color: rgba($euiShadowColor, .6);
-        }
         @include euiBottomShadowMedium;
+
+        @if (lightness($euiTextColor) < 50) {
+          border-bottom-color: rgba($euiShadowColor, .5);
+        } @else {
+          // Applied again here in case dark theme overrides light
+          border-bottom-color: $euiBorderColor;
+        }
 
         &.#{$selector}--isClickable:hover,
         &.#{$selector}--isClickable:focus {
-          @include euiBottomShadow;
+          @include euiBottomShadow($color: $euiShadowColor, $opacity: .2);
         }
       }
     }
