Fix width of filter group items (#1078)

--- a/src/components/filter_group/_filter_group.scss
+++ b/src/components/filter_group/_filter_group.scss
@@ -21,6 +21,8 @@
   }
 }
 
+// A fixed width is required in IE11 because of the shift in widths that can be caused
+// by the loading animation that precedes the results.
 .euiFilterGroup__popoverPanel {
-  max-width: $euiSize * 20;
+  width: $euiSize * 18;
 }
