--- a/src/components/flex/_flex_item.scss
+++ b/src/components/flex/_flex_item.scss
@@ -1,9 +1,15 @@
 /**
  * 1. Allow EuiPanels to expand to fill the item.
+ * 2. IE11 hack forces inner content of flex items to respect a higher parent's width (mostly) and
+ *    not cause weird wrapping issues.
  */
 .euiFlexItem {
   display: flex; /* 1 */
   flex-direction: column; /* 1 */
+  
+  @include internetExplorerOnly {
+    min-width: 1px; /* 2 */
+  }
 
   /*
    * 1. We need the extra specificity here to override the FlexGroup > FlexItem styles.
