Allowing more status options for `EuiSteps` (#1088)

--- a/src/components/steps/_steps.scss
+++ b/src/components/steps/_steps.scss
@@ -13,24 +13,18 @@
   }
 
   .euiStep__circle {
-    @include createStepsNumber();
-
     margin-right: $euiStepNumberMargin;
     vertical-align: top; /* 1 */
 
-    &.euiStep__circle--incomplete {
-      background-color: transparent;
-      border: solid 2px $euiColorPrimary;
-      color: $euiColorDarkShade;
-    }
-
-    &.euiStep__circle--complete {
+    &[class*="complete"],
+    &[class*="warning"],
+    &[class*="danger"] {
       animation: euiGrow $euiAnimSpeedFast $euiAnimSlightBounce;
     }
 
-    .euiStep__circleIcon {
-      position: relative;
-      top: -2px;
+    &[class*="incomplete"] {
+      border-color: $euiColorPrimary;
+      animation: none;
     }
   }
 
