Added support for `fullWidth` on `EuiComboBox` (#1095)

--- a/src/components/combo_box/combo_box_options_list/_combo_box_options_list.scss
+++ b/src/components/combo_box/combo_box_options_list/_combo_box_options_list.scss
@@ -6,7 +6,7 @@
  * 3. The height can expand, hence auto
  */
 .euiComboBoxOptionsList {
-  @include euiFormControlSize(auto); /* 3 */
+  @include euiFormControlSize(auto, $includeAlternates: true); /* 3 */
   z-index: $euiZComboBox;
   position: absolute; /* 2 */
   top: 0; /* 2 */
