--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -1,5 +1,5 @@
 .euiComboBox {
-  @include euiFormControlSize(auto);
+  @include euiFormControlSize(auto, $includeAlternates: true);
   position: relative;
 
   /**
@@ -8,7 +8,7 @@
    * 3. The height on combo can be larger than normal text inputs.
    */
   .euiComboBox__inputWrap {
-    @include euiFormControlStyle($includeStates: false, $includeSizes:false);
+    @include euiFormControlStyle($includeStates: false, $includeSizes: true);
     @include euiFormControlWithIcon($isIconOptional: true);
     @include euiFormControlSize(auto); /* 3 */
 
