--- a/src/components/combo_box/combo_box_input/_combo_box_pill.scss
+++ b/src/components/combo_box/combo_box_input/_combo_box_pill.scss
@@ -3,4 +3,14 @@
 .euiComboBoxPill {
   margin: $euiSizeXS !important;
   line-height: $euiSizeL - 2px;
+
+  &--plainText {
+    font-size: $euiFontSizeS;
+    font-family: $euiFontFamily;
+    padding: 0 $euiSizeXS;
+    color: $euiTextColor;
+    vertical-align: middle;
+    display: inline-block;
+    @include euiTextTruncate;
+  }
 }
