Adds maxWidth prop to EuiModal (#1165)
* add maxWidth prop to EuiModal

* switch default to true

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -23,6 +23,10 @@
   }
 }
 
+.euiModal--maxWidth-default {
+  max-width: map-get($euiBreakpoints, "m");
+}
+
 .euiModal--confirmation {
   width: 450px;
   min-width: auto;
