Fix modal min-width issue in IE11 (#1174)
IE has trouble with min-widths and flex boxes if not used as as a pixel value. This PR makes the min-width use our max-form width (400px) as the min-width we'd accept on a modal. I picked that value because it's good for short notices, and our modals tend to hold input values of some kind. I updated our default modal to not use style tags for width so this would be a better default for IE11.

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -1,6 +1,8 @@
 /**
  * 1. Fix IE overflow issue (min-height) by adding a separate wrapper for the
  *    flex display. https://github.com/philipwalton/flexbugs#flexbug-3
+ * 2. IE has trouble with min-widths on flex elements. Use the pixel value
+ *    from our forms since that's usually the smallest we want them.
  */
 
 .euiModal {
@@ -12,7 +14,7 @@
   background-color: $euiColorEmptyShade;
   border-radius: $euiBorderRadius;
   z-index: $euiZModal;
-  min-width: 50%;
+  min-width: $euiFormMaxWidth;
   animation: euiModal $euiAnimSpeedSlow $euiAnimSlightBounce;
 
   .euiModal__flex { /* 1 */
