--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -21,6 +21,7 @@
 @import 'empty_prompt/index';
 @import 'error_boundary/index';
 @import 'expression/index';
+@import 'facet/index';
 @import 'filter_group/index';
 @import 'flex/index';
 @import 'flyout/index';
