--- a/src/components/context_menu/_context_menu.scss
+++ b/src/components/context_menu/_context_menu.scss
@@ -2,6 +2,7 @@ $euiContextMenuWidth: $euiSize * 16;
 
 .euiContextMenu {
   width: $euiContextMenuWidth;
+  max-width: 100%;
   position: relative;
   overflow: hidden;
   transition: height $euiAnimSpeedFast $euiAnimSlightResistance;
