--- a/src/components/combo_box/combo_box_input/_combo_box_pill.scss
+++ b/src/components/combo_box/combo_box_input/_combo_box_pill.scss
@@ -5,6 +5,7 @@
   line-height: $euiSizeL - 2px;
 
   &--plainText {
+    line-height: $euiSizeL;
     font-size: $euiFontSizeS;
     font-family: $euiFontFamily;
     padding: 0 $euiSizeXS;
