--- a/src/global_styling/variables/_animations.scss
+++ b/src/global_styling/variables/_animations.scss
@@ -9,25 +9,5 @@ $euiAnimSpeedNormal: 250ms !default;
 $euiAnimSpeedSlow: 350ms !default;
 $euiAnimSpeedExtraSlow: 500ms !default;
 
-@keyframes euiAnimFadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes euiGrow {
-  0% {
-    opacity: 0;
-  }
-  1% {
-    opacity: 0;
-    transform: scale(0);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
+// Keyframe animation declarations can be found in
+// utility/animations.scss
