--- a/src/global_styling/variables/_z_index.scss
+++ b/src/global_styling/variables/_z_index.scss
@@ -27,8 +27,8 @@ $euiZLevel9:          9000;
 $euiZContent:         $euiZLevel0;
 $euiZHeader:          $euiZLevel1;
 $euiZContentMenu:     $euiZLevel2;
-$euiZComboBox:        $euiZContentMenu - 1;
 $euiZNavigation:      $euiZLevel4;
 $euiZMask:            $euiZLevel6;
 $euiZModal:           $euiZLevel8;
+$euiZComboBox:        $euiZModal + 1;
 $euiZToastList:       $euiZLevel9;
