Add support for table footers (#1202)
* Add <EuiTableFooter> and <EuiTableFooterCell>.

* Add support for footers to <EuiBasicTable>

* Update docs with table footer usage

* Add table footer tests

* Resolve docs merge conflicts

* Resolve CHANGELOG conflicts

* Force table footers to always have one <td> per column

* Remove mobile props & scope from table footer, adjust PropTypes

* Table footer styles cleanup

* Remove committed docs bundle. Reverts c5f0a26

* Change table footer function signature to accept pagination

* Add missing table header/footer snapshot tests

* Ensure column footer data is not passed to every table cell as a prop

* Update table footer docs with a better example

--- a/src/components/table/_responsive.scss
+++ b/src/components/table/_responsive.scss
@@ -9,6 +9,10 @@
       display: none; // Use mobile versions of selecting and filtering instead
     }
 
+    tfoot {
+      display: none; // Not supporting responsive footer content
+    }
+
     // Make each row a Panel
     @include euiPanel($selector: 'euiTableRow');
 
