--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -22,6 +22,7 @@
   }
 }
 
+.euiTableFooterCell,
 .euiTableHeaderCell {
   @include euiTableCell;
   @include euiTitle("xxs");
@@ -68,6 +69,7 @@
 
 .euiTableHeaderCellCheckbox {
   @include euiTableCellCheckbox;
+  border-top: none;
 }
 
 .euiTableRow {
@@ -113,6 +115,12 @@
   @include euiTableCellCheckbox;
 }
 
+// Must come after .euiTableRowCell selector for border to be removed
+.euiTableFooterCell {
+  background-color: $euiColorLightestShade;
+  border-bottom: none;
+}
+
 /**
  * 1. Vertically align all children.
  * 2. The padding on this div allows the ellipsis to show if the content is truncated. If
@@ -125,16 +133,16 @@
   padding: $euiTableCellContentPadding; /* 2 */
 }
 
-  /**
-   * 1. Prevent very long single words (e.g. the name of a field in a document) from overflowing
-   *    the cell.
-   */
-  .euiTableCellContent__text {
-    min-width: 0;
-    text-overflow: ellipsis;
-    word-break: break-all; /* 1 */ // Fallback for FF and IE
-    word-break: break-word; /* 1 */
-  }
+/**
+  * 1. Prevent very long single words (e.g. the name of a field in a document) from overflowing
+  *    the cell.
+  */
+.euiTableCellContent__text {
+  min-width: 0;
+  text-overflow: ellipsis;
+  word-break: break-all; /* 1 */ // Fallback for FF and IE
+  word-break: break-word; /* 1 */
+}
 
 .euiTableCellContent--alignRight {
   justify-content: flex-end;
@@ -147,6 +155,7 @@
 }
 
 .euiTableHeaderCell,
+.euiTableFooterCell,
 .euiTableCellContent--truncateText {
   white-space: nowrap; /* 3 */
 
