Make EuiBasicTable rows keyboard-accessible when they are clickable. (#1206)

--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -228,3 +228,13 @@
     max-height: 1000px;
   }
 }
+
+.euiTableRow-isClickable {
+  &:hover {
+    background-color: $euiTableHoverClickableColor;
+  }
+
+  &:focus {
+    background-color: $euiTableFocusClickableColor;
+  }
+}
