--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -232,6 +232,7 @@
 .euiTableRow-isClickable {
   &:hover {
     background-color: $euiTableHoverClickableColor;
+    cursor: pointer;
   }
 
   &:focus {
