Disable pointer-events on all disabled descendents of tooltips (#1222)
* Disable pointer-events on all disabled descendents of tooltips

* changelog

--- a/src/components/tool_tip/_tool_tip.scss
+++ b/src/components/tool_tip/_tool_tip.scss
@@ -78,7 +78,7 @@
   // wouldn't trigger the onMouseOut and hide the tooltip; disabling pointer events
   // on disabled elements means any mouse events remain handled by parent elements
   // https://jakearchibald.com/2017/events-and-disabled-form-fields/
-  > *[disabled] {
+  *[disabled] {
     pointer-events: none;
   }
 }
