Increase default font size of tabs in KUI theme (#1244)

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -13,7 +13,7 @@
 
   &.euiTabs--small {
     .euiTab {
-      @include euiFontSizeS;
+      @include fontSize($euiTabFontSizeS);
       padding: $euiSizeS $euiSizeS;
     }
   }
@@ -27,7 +27,8 @@
 }
 
 .euiTab {
-  @include euiFontSize;
+  @include fontSize($euiTabFontSize);
+  line-height: $euiLineHeight;
 
   position: relative;
   cursor: pointer;
