--- a/src/themes/k6/k6_globals.scss
+++ b/src/themes/k6/k6_globals.scss
@@ -14,3 +14,7 @@ $euiFontSizeXXL:    $euiFontSize * nth($euiTextScale, 1); // 32px
 
 // Make titles bold.
 $euiFontWeightLight: 600;
+
+// Ensure non-small tabs actually have a larger font size
+$euiTabFontSize: $euiFontSizeM;
+$euiTabFontSizeS: $euiFontSizeS;
