Featurebug/combobox input focus (#1258)
* initial refactor of ComboBox focus management

* small tweaks and fixes for ComboBox focus management

* Updated EuiComboBox unit tests

* aria combobox attributes

* Added compressed prop to EuiComboBox

* small tweaks & dead code removal

* changelog

* Some ComboBox fixes

- Fixed single selection truncation
- Actually apply `compressed` styles

* pr feedback

* retain focus on EuiComboBox after Escape key

* Fix compressed height

--- a/src/components/combo_box/combo_box_input/_combo_box_pill.scss
+++ b/src/components/combo_box/combo_box_input/_combo_box_pill.scss
@@ -3,6 +3,7 @@
 .euiComboBoxPill {
   margin: $euiSizeXS !important;
   line-height: $euiSizeL - 2px;
+  vertical-align: baseline;
 
   &--plainText {
     line-height: $euiSizeL;
