--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -7,12 +7,20 @@
    * 2. Don't allow pills to overlap with the caret or clear button.
    * 3. The height on combo can be larger than normal text inputs.
    */
+
+   &--compressed,
+   .euiFormControlLayout--compressed {
+     height: auto;
+   }
+
   .euiComboBox__inputWrap {
-    @include euiFormControlStyle($includeStates: false, $includeSizes: true);
+    @include euiFormControlStyle($includeStates: false, $includeSizes: false);
     @include euiFormControlWithIcon($isIconOptional: true);
-    @include euiFormControlSize();
+    @include euiFormControlSize(auto);
     padding: $euiSizeXS;
     @include euiFormControlLayout__padding(1); /* 2 */
+
+    display: flex; /* 1 */
 
     &.euiComboBox__inputWrap-isClearable {
       @include euiFormControlLayout__padding(2); /* 2 */
@@ -20,7 +28,6 @@
 
     &:not(.euiComboBox__inputWrap--noWrap) {
       height: auto;  /* 3 */
-      display: flex; /* 1 */
       flex-wrap: wrap; /* 1 */
       align-content: flex-start;
 
@@ -32,7 +39,7 @@
 
   /**
    * 1. Force field height to match other field heights.
-   * 2. Force input height to expand tp fill this element.
+   * 2. Force input height to expand to fill this element.
    * 3. Reset appearance on Safari.
    * 4. Fix react-input-autosize appearance.
    * 5. Prevent a lot of input from causing the react-input-autosize to overflow the container.
@@ -70,6 +77,14 @@
   &.euiComboBox-isDisabled {
     .euiComboBox__inputWrap {
       @include euiFormControlDisabledStyle;
+    }
+  }
+
+  &.euiComboBox--compressed {
+    .euiComboBox__inputWrap {
+      line-height: $euiFormControlCompressedHeight; /* 2 */
+      padding-top: 0;
+      padding-bottom: 0;
     }
   }
 }
