--- a/src/components/combo_box/combo_box_options_list/_combo_box_option.scss
+++ b/src/components/combo_box/combo_box_options_list/_combo_box_option.scss
@@ -12,7 +12,7 @@
     text-decoration: underline;
   }
 
-  &:focus {
+  &.euiComboBoxOption-isFocused {
     cursor: pointer;
     color: $euiColorPrimary;
     background-color: $euiFocusBackgroundColor;
