--- a/src/components/code/_code_block.scss
+++ b/src/components/code/_code_block.scss
@@ -76,7 +76,7 @@
     color: $euiTextColor;
     font-size: 90%; // 1
     padding: 0 $euiSizeS;
-    background: $euiColorLightestShade;
+    background: $euiCodeBlockBackgroundColor;
 
     .euiCodeBlock__pre {
       padding:  0 $euiSizeXS;
