--- a/src/components/tool_tip/_tool_tip.scss
+++ b/src/components/tool_tip/_tool_tip.scss
@@ -3,7 +3,7 @@
  */
 
 .euiToolTip {
-  @include euiBottomShadow($color: $euiShadowColor);
+  @include euiBottomShadow($color: #000);
   @include euiFontSizeS();
 
   position: absolute; /* 1 */
