Adds lab icon and updates beta badge style (#1291)
* adds lab icon

* update beta badge styles

* change name to beaker

--- a/src/components/badge/beta_badge/_mixins.scss
+++ b/src/components/badge/beta_badge/_mixins.scss
@@ -26,6 +26,7 @@
       .#{$selector}__betaBadge {
         overflow: hidden;
         text-overflow: ellipsis;
+        background-color: $euiColorEmptyShade;
       }
     }
   }
