Adding a `token` component. (#1270)
* Adding a `token` component.

Currently used primarily for code-based search results.

* Updating Changelog

* Reworking the component, moving the glyphs into the icon component

The `EuiToken` component now supports using any `EuiIcon` as it's glyph. Colors, shapes, sizes, borders, and solid colors can be set with props.

* Fixed a misspelling in `token.test.js`

* Make tokens have displayOptions

* clean up defaults

* * Implementing @cchaos `makeHighContrastColor` functions
* Integrating @snide `displayOptions` method for setting props
* Providing a `hideBorder` option
* Including a `large` and `hideBorder` example in the docs

* Changing the `isOpaque` prop to `fill`.

* Fixing a spelling error and residual `isOpaque` reference.

* Clean up
* Removing duplicate SVG files
* Renaming a few files for clarity
* Removing the tokens from the general icon example list
* Wordsmithing the docs for clarity

* Updated test file & cleaning up icon order in docs, cleaning up SVGs

* Update src/components/token/index.d.ts

Co-Authored-By: daveyholler <daveyholler@gmail.com>

* Update src/components/token/token.js

Co-Authored-By: daveyholler <daveyholler@gmail.com>

* Update src/components/token/index.d.ts

Co-Authored-By: daveyholler <daveyholler@gmail.com>

* Updating definitions file.

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -51,6 +51,7 @@
 @import 'tabs/index';
 @import 'title/index';
 @import 'toast/index';
+@import 'token/index';
 @import 'toggle/index';
 @import 'tool_tip/index';
 @import 'text/index';
