Some `EuiSuperSelect` fixes (#1295)

--- a/src/components/form/super_select/_super_select.scss
+++ b/src/components/form/super_select/_super_select.scss
@@ -27,6 +27,14 @@
   @include euiBottomShadowFlat; /* 2 */
 }
 
+.euiSuperSelect__item {
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    background-color: $euiFocusBackgroundColor;
+  }
+}
+
 .euiSuperSelect__item--hasDividers:not(:last-of-type) {
   border-bottom: $euiBorderThin;
 }
