Some more mixins (#1305)

--- a/src/global_styling/mixins/_helpers.scss
+++ b/src/global_styling/mixins/_helpers.scss
@@ -49,6 +49,15 @@
   }
 }
 
+// Hiding elements offscreen to only be read by screen reader
+@mixin euiScreenReaderOnly {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
 
 // Specifically target IE11, but not Edge.
 @mixin internetExplorerOnly {
