--- a/src/components/tool_tip/_tool_tip.scss
+++ b/src/components/tool_tip/_tool_tip.scss
@@ -3,18 +3,10 @@
  */
 
 .euiToolTip {
-  @include euiBottomShadow($color: #000);
-  @include euiFontSizeS;
-
-  position: absolute; /* 1 */
-  border-radius: $euiBorderRadius;
-  padding: $euiSizeM;
-  background-color: tintOrShade($euiColorFullShade, 25%, 90%);
-  color: $euiColorGhost;
-  max-width: 256px;
+  @include euiToolTipStyle;
+  @include euiToolTipAnimation('top');
+  position: absolute;
   opacity: 0;
-  animation: euiToolTipTop $euiAnimSpeedSlow ease-out $euiAnimSpeedNormal forwards;
-  z-index: $euiZLevel9;
 
   // Animation delays
   &.euiToolTip--delayLong {
@@ -64,10 +56,7 @@
   }
 
   .euiToolTip__title {
-    font-weight: $euiFontWeightBold;
-    border-bottom: solid 1px tintOrShade($euiColorFullShade, 35%, 80%);
-    padding-bottom: $euiSizeXS;
-    margin-bottom: $euiSizeXS;
+    @include euiToolTipTitle;
   }
 }
 
