Fix combobox full width size (#1314)
Fixes #1313

--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -16,7 +16,7 @@
   .euiComboBox__inputWrap {
     @include euiFormControlStyle($includeStates: false, $includeSizes: false);
     @include euiFormControlWithIcon($isIconOptional: true);
-    @include euiFormControlSize(auto);
+    @include euiFormControlSize(auto, $includeAlternates: true);
     padding: $euiSizeXS;
     // sass-lint:disable-block mixins-before-declarations
     @include euiFormControlLayoutPadding(1); /* 2 */ //
