Update global date picker (#1219)
Also fixes #1207

--- a/src-docs/src/theme_dark.scss
+++ b/src-docs/src/theme_dark.scss
@@ -1,3 +1,4 @@
 @import '../../src/theme_dark';
 @import './components/guide_components';
 @import './views/header/global_filter_group';
+@import './views/date_picker/global_date_picker';
