--- a/src/components/expression/_expression.scss
+++ b/src/components/expression/_expression.scss
@@ -10,6 +10,10 @@
   border-bottom: $euiBorderEditable;
   font-size: $euiFontSize;
   cursor: pointer;
+
+  &:focus {
+    border-bottom: solid 2px $expressionColorHighlight;
+  }
 }
 
 .euiExpressionButton__description {
