[Amsterdam] Updating shadows (#3428)
* Working on shadows.

* Fixing a missing px unit on small shadows.

* Fixing a unitless value on large shadows.

* Code refactor

- Removed modal override and changed the default theme usage since it wasn’t really changing the opacity noticeabley anyway
- Moved warning messages to each mixin … sigh
- Made the docs layout look more Amsterdamy

* Removing the largest value from large shadows.

* Adding missing semicolons

* Update src/themes/eui-amsterdam/global_styling/mixins/_shadow.scss

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

Co-authored-by: cchaos <caroline.horn@elastic.co>
Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src-docs/src/views/guidelines/index.scss
+++ b/src-docs/src/views/guidelines/index.scss
@@ -144,8 +144,9 @@
 }
 
 .guideSass__shadow {
-  padding: $euiSize;
+  padding: $euiSizeXXL;
   background: $euiColorEmptyShade;
+  border-radius: $euiBorderRadius;
 
   & + .guideSass__shadow {
     margin-top: $euiSizeXL;
