--- a/src/themes/eui-amsterdam/global_styling/mixins/_panel.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_panel.scss
@@ -43,7 +43,7 @@
 
         &#{$selector}--isClickable:hover,
         &#{$selector}--isClickable:focus {
-          @include euiBottomShadow($color: $euiShadowColor, $opacity: .2);
+          @include euiBottomShadow($color: $euiShadowColor);
         }
       }
     }
