--- a/src-docs/src/theme_amsterdam_light.scss
+++ b/src-docs/src/theme_amsterdam_light.scss
@@ -3,6 +3,7 @@
 
 @import '../../src/theme_amsterdam_light';
 @import './components/guide_components';
+@import './components/guide_components_amsterdam';
 @import './views/suggest/global_filter_group';
 
 // Elastic charts
