--- a/src/themes/eui-amsterdam/global_styling/index.scss
+++ b/src/themes/eui-amsterdam/global_styling/index.scss
@@ -2,6 +2,7 @@
 
 // Functions need to be first, since we use them in our variables and mixin definitions
 @import '../../../global_styling/functions/index';
+@import 'functions/index';
 
 // Variables come next, and are used in some mixins
 @import '../../../global_styling/variables/index';
