Increase contrast for EuiCodeBlock colors (#3309)
* Increase contrast for EuiCodeBlock colors

* add CL

* Update CHANGELOG.md

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* update changelog

* Improving colors and examples

* Adding more colors

* remove unused classname

* Addition and deletion shadow position

* Separate tag and name classes

* Improving html example

* Removing unecessary empty space

* Color blind palette

Co-authored-by: Elizabet Oliveira <elizabet.oliveira@elastic.co>
Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/components/code/_code_block.scss
+++ b/src/components/code/_code_block.scss
@@ -179,7 +179,6 @@
 
   .hljs-keyword {
     color: $euiCodeBlockKeywordColor;
-    font-weight: bold;
   }
 
   .hljs-function > .hljs-title {
@@ -227,18 +226,18 @@
     color: $euiCodeBlockSectionColor;
   }
 
+  .hljs-addition,
+  .hljs-deletion {
+    padding-left: $euiSizeXS;
+    margin-left: -$euiSizeXS;
+  }
+
   .hljs-addition {
-    background-color: $euiCodeBlockAdditionBackgroundColor;
-    color: $euiCodeBlockAdditionColor;
-    display: inline-block;
-    width: 100%;
+    box-shadow: -$euiSizeXS 0 $euiCodeBlockAdditionColor;
   }
 
   .hljs-deletion {
-    background-color: $euiCodeBlockDeletionBackgroundColor;
-    color: $euiCodeBlockDeletionColor;
-    display: inline-block;
-    width: 100%;
+    box-shadow: -$euiSizeXS 0 $euiCodeBlockDeletionColor;
   }
 
   .hljs-selector-class {
