[Amsterdam] Improve modals (#3515)
* Remove modal border & improve overlay color

* Remove amsterdam modal border-radius

* Adjust overlay mask transparency

* Add changes to CHANGELOG

* Adjust EuiImage caption for darker overlay

--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -1,4 +1,7 @@
 @import 'button';
 @import 'button_empty';
 @import 'button_group';
+@import 'image';
+@import 'modal';
+@import 'overlay_mask';
 @import 'text';
