[Amsterdam] Remove borders from flyouts and popover arrows (#3477)
* [Amsterdam] Removing border-left from flyout

* Improve popover arrow borders into faux-shadows

* Use $euiColorInk for arrow shadow

* Use clip for IE11 (instead of clip-path)

* Add changelog notices for amsterdam changes

* Remove some uneccessary overrides

* Using sizing vars wherever possible

* cl

* Change template %eui-flyout to mixin euiFlyout

Easier override of border with variable

* Replace clip with clip-path

* Remove IE only helper for popover arrows

* Add interpolation for all arrow shadow calculations

* cl

* Adjust arrow compensation

* Compensate by position

Co-authored-by: cchaos <caroline.horn@elastic.co>
Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/components/collapsible_nav/_collapsible_nav.scss
+++ b/src/components/collapsible_nav/_collapsible_nav.scss
@@ -1,8 +1,10 @@
 // Extends euiFlyout
-@use '../flyout/flyout';
+@import '../flyout/variables';
+@import '../flyout/mixins';
 
 .euiCollapsibleNav {
-  @extend %eui-flyout;
+  @include euiFlyout;
+  border-left: none;
   right: auto;
   left: 0;
   width: $euiCollapsibleNavWidth;
@@ -25,7 +27,7 @@
 
   &,
   &:focus {
-    // Override default `EuiButtonEmpty` :focus background to ensure better contrast 
+    // Override default `EuiButtonEmpty` :focus background to ensure better contrast
     background: $euiColorEmptyShade;
   }
 }
